--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>alephscan</title>
+    <title>Alephium</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
